@@ -1,0 +1,2 @@
+<P>Maintenance commands sent; job ID is <A HREF="/printers/{printer_name}">
+{printer_name}-{job_id}</A>.</P>
