@@ -1,2 +1,2 @@
 <P>Test page sent; job ID is <A HREF="/{SECTION}/{printer_name}">
-{printer_name}-{job_id}</A>.
+{printer_name}-{job_id}</A>.</P>
